# yurei-quant-insight

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py
src/analysis/: __init__.py  analyzer.py  ingestion.py  metrics.py
src/config/: settings.py
src/db/: __init__.py  engine.py  models.py
src/models/: __init__.py  signals.py
src/output/: __init__.py  console.py
