[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yurei-quant-insight"
version = "0.1.0"
description = "High-performance quantitative analysis layer for Yurei DeFi intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Yurei AI", email = "dev@yureiai.xyz" }
]
keywords = ["solana", "defi", "quantitative-analysis", "trading", "alpha"]

dependencies = [
    "polars>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
yurei-insight = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
